# hello-triangle-wasm

./: Cargo.toml  readme.md
src/: main.rs  shader.wgsl
www/: hello-triangle-wasm.js  hello-triangle-wasm_bg.wasm  index.html
