[package]
name = "hello-triangle-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }

console_error_panic_hook = "0.1.7"
console_log = "1"
js-sys = { version = "0.3.70", default-features = false }
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3"
web-time = "1.1.0"
wgpu = { version = "24.0.3", default-features = false, features = ["webgpu", "wgsl"] }

[dependencies.web-sys]
version = "0.3.74"
default-features = false
features = [
    "Element",
    "Window",
    "Document"
]